changed translations to work with boost/format

--- a/translations/doxy_ar.po
+++ b/translations/doxy_ar.po
@@ -3,7 +3,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=6; plural=(n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : (n%100>=3 && n%100<=10) ? 3 : n%100>=11 ? 4 : 5);\n"
+"Plural-Forms: nplurals=6; plural=(n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : (n%1%00>=3 && n%1%00<=10) ? 3 : n%1%00>=11 ? 4 : 5);\n"
 "X-Language: ar_EG\n"
 "X-Qt-Contexts: true\n"
 
@@ -85,7 +85,7 @@ msgstr ""
 #: ../../src/translator_cs.h:117
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Generated automatically by DoxyPress for %1 from the source code."
+msgid "Generated automatically by DoxyPress for %1% from the source code."
 msgstr ""
 
 #: ../../src/translator_cs.h:120
@@ -412,19 +412,19 @@ msgstr ""
 #: ../../src/translator_cs.h:491
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Generated on %1 &nbsp; by"
+msgid "Generated on %1% &nbsp; by"
 msgstr ""
 
 #: ../../src/translator_cs.h:493
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Generated on %1 for %2 &nbsp; by"
+msgid "Generated on %1% for %2% &nbsp; by"
 msgstr ""
 
 #: ../../src/translator_cs.h:499
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Inheritance diagram for %1:"
+msgid "Inheritance diagram for %1%:"
 msgstr ""
 
 #: ../../src/translator_cs.h:504
@@ -500,109 +500,109 @@ msgstr ""
 #: ../../src/translator_cs.h:585
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Class Template Reference"
+msgid "%1% Class Template Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:587
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Class Reference"
+msgid "%1% Class Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:593
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Struct Template Reference"
+msgid "%1% Struct Template Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:595
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Struct Reference"
+msgid "%1% Struct Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:601 ../../src/translator_cs.h:1738
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Union Template Reference"
+msgid "%1% Union Template Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:603 ../../src/translator_cs.h:1740
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Union Reference"
+msgid "%1% Union Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:609 ../../src/translator_cs.h:1746
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Interface Template Reference"
+msgid "%1% Interface Template Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:611 ../../src/translator_cs.h:1748
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Interface Reference"
+msgid "%1% Interface Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:617 ../../src/translator_cs.h:1754
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Protocol Template Reference"
+msgid "%1% Protocol Template Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:619
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Protocol Reference"
+msgid "%1% Protocol Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:625 ../../src/translator_cs.h:1762
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Category Template Reference"
+msgid "%1% Category Template Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:627 ../../src/translator_cs.h:1764
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Category Reference"
+msgid "%1% Category Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:633 ../../src/translator_cs.h:1770
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Exception Template Reference"
+msgid "%1% Exception Template Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:635 ../../src/translator_cs.h:1772
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Exception Reference"
+msgid "%1% Exception Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:641 ../../src/translator_cs.h:1778
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Template Reference"
+msgid "%1% Template Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:643 ../../src/translator_cs.h:1780
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Reference"
+msgid "%1% Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:653
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 File Reference"
+msgid "%1% File Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:658
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Namespace Reference"
+msgid "%1% Namespace Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:662
@@ -673,25 +673,25 @@ msgstr ""
 #: ../../src/translator_cs.h:733
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Inherits %1."
+msgid "Inherits %1%."
 msgstr ""
 
 #: ../../src/translator_cs.h:740
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Inherited by %1."
+msgid "Inherited by %1%."
 msgstr ""
 
 #: ../../src/translator_cs.h:747
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Reimplemented from %1."
+msgid "Reimplemented from %1%."
 msgstr ""
 
 #: ../../src/translator_cs.h:754
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Reimplemented in %1."
+msgid "Reimplemented in %1%."
 msgstr ""
 
 #: ../../src/translator_cs.h:759
@@ -855,13 +855,13 @@ msgstr ""
 #: ../../src/translator_cs.h:921
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Collaboration diagram for %1:"
+msgid "Collaboration diagram for %1%:"
 msgstr ""
 
 #: ../../src/translator_cs.h:926
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Include dependency graph for %1:"
+msgid "Include dependency graph for %1%:"
 msgstr ""
 
 #: ../../src/translator_cs.h:931
@@ -1060,7 +1060,7 @@ msgid ""
 "\\endcode\n"
 "This will result in the following graph:\n"
 "\n"
-"<center><img alt=\"\" src=\"graph_legend.%1\"></center>\n"
+"<center><img alt=\"\" src=\"graph_legend.%1%\"></center>\n"
 "\n"
 "The boxes in the above graph have the following meaning:\n"
 "\n"
@@ -1118,7 +1118,7 @@ msgstr ""
 #: ../../src/translator_cs.h:1165
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Package %1"
+msgid "Package %1%"
 msgstr ""
 
 #: ../../src/translator_cs.h:1170
@@ -1299,13 +1299,13 @@ msgstr ""
 #: ../../src/translator_cs.h:1430
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Implements %1."
+msgid "Implements %1%."
 msgstr ""
 
 #: ../../src/translator_cs.h:1437
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Implemented %1."
+msgid "Implemented %1%."
 msgstr ""
 
 #: ../../src/translator_cs.h:1445
@@ -1392,7 +1392,7 @@ msgstr ""
 #: ../../src/translator_cs.h:1550
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Source File"
+msgid "%1% Source File"
 msgstr ""
 
 #: ../../src/translator_cs.h:1557
@@ -1420,7 +1420,7 @@ msgstr ""
 #: ../../src/translator_cs.h:1586
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Directory Reference"
+msgid "%1% Directory Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:1596
@@ -1527,31 +1527,31 @@ msgstr ""
 #: ../../src/translator_cs.h:1722
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Module Template Reference"
+msgid "%1% Module Template Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:1724 ../../src/translator_cs.h:1789
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Module Reference"
+msgid "%1% Module Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:1730
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Type Template Reference"
+msgid "%1% Type Template Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:1732
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Type Reference"
+msgid "%1% Type Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:1756
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1  Protocol Reference"
+msgid "%1%  Protocol Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:1794
@@ -1705,7 +1705,7 @@ msgstr ""
 #: ../../src/translator_cs.h:1975
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Relation"
+msgid "%1% Relation"
 msgstr ""
 
 #: ../../src/translator_cs.h:1980
@@ -1731,13 +1731,13 @@ msgstr ""
 #: ../../src/translator_cs.h:2003
 #, qt-format
 msgctxt "doxy-text|"
-msgid "File in %1"
+msgid "File in %1%"
 msgstr ""
 
 #: ../../src/translator_cs.h:2011
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Includes file in %1"
+msgid "Includes file in %1%"
 msgstr ""
 
 #: ../../src/translator_cs.h:2016
@@ -1753,7 +1753,7 @@ msgstr ""
 #: ../../src/translator_cs.h:2026
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Directory dependency graph for %1:"
+msgid "Directory dependency graph for %1%:"
 msgstr ""
 
 #: ../../src/translator_cs.h:2031
@@ -1769,7 +1769,7 @@ msgstr ""
 #: ../../src/translator_cs.h:2041
 #, qt-format
 msgctxt "doxy-text|"
-msgid "and %1 more..."
+msgid "and %1% more..."
 msgstr ""
 
 #: ../../src/translator_cs.h:2047
@@ -1786,13 +1786,13 @@ msgstr ""
 #: ../../src/translator_cs.h:2057
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Enum Reference"
+msgid "%1% Enum Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:2062
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 inherited from %2"
+msgid "%1% inherited from %2%"
 msgstr ""
 
 #: ../../src/translator_cs.h:2069
@@ -1858,19 +1858,19 @@ msgstr ""
 #: ../../src/translator_cs.h:2144
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Constant Group Reference"
+msgid "%1% Constant Group Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:2149
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Service Reference"
+msgid "%1% Service Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:2154
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Singleton Reference"
+msgid "%1% Singleton Reference"
 msgstr ""
 
 #: ../../src/translator_cs.h:2160
