--- a/translations/doxy_es.po
+++ b/translations/doxy_es.po
@@ -81,8 +81,8 @@ msgstr "Escribe"
 #: ../../src/translator_cs.h:2149
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Service Reference"
-msgstr "%1 Servicio de Referencia"
+msgid "%1% Service Reference"
+msgstr "%1% Servicio de Referencia"
 
 #: ../../src/translator_cs.h:964
 msgctxt "doxy-text|"
@@ -300,8 +300,8 @@ msgstr "Lista Espacio de nombres"
 #: ../../src/translator_cs.h:1586
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Directory Reference"
-msgstr "%1 Referencia Directorio"
+msgid "%1% Directory Reference"
+msgstr "%1% Referencia Directorio"
 
 #: ../../src/translator_cs.h:2016
 msgctxt "doxy-text|"
@@ -311,8 +311,8 @@ msgstr "Bibliografía"
 #: ../../src/translator_cs.h:1165
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Package %1"
-msgstr "Paquete %1"
+msgid "Package %1%"
+msgstr "Paquete %1%"
 
 #: ../../src/translator_cs.h:824
 msgctxt "doxy-text|"
@@ -353,14 +353,14 @@ msgstr "Gráfico Leyenda"
 #: ../../src/translator_cs.h:641 ../../src/translator_cs.h:1778
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Template Reference"
-msgstr "%1 Referencia Plantilla"
+msgid "%1% Template Reference"
+msgstr "%1% Referencia Plantilla"
 
 #: ../../src/translator_cs.h:1430
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Implements %1."
-msgstr "Implementa %1."
+msgid "Implements %1%."
+msgstr "Implementa %1%."
 
 #: ../../src/translator_cs.h:946
 msgctxt "doxy-text|"
@@ -370,14 +370,14 @@ msgstr "Condición previa"
 #: ../../src/translator_cs.h:1756
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1  Protocol Reference"
-msgstr "%1 Protocolo de Referencia"
+msgid "%1%  Protocol Reference"
+msgstr "%1% Protocolo de Referencia"
 
 #: ../../src/translator_cs.h:619
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Protocol Reference"
-msgstr "%1 Protocolo de Referencia"
+msgid "%1% Protocol Reference"
+msgstr "%1% Protocolo de Referencia"
 
 #: ../../src/translator_cs.h:669
 msgctxt "doxy-text|"
@@ -405,8 +405,8 @@ msgstr "Documentación de los campos"
 #: ../../src/translator_cs.h:2062
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 inherited from %2"
-msgstr "%1 heredado de %2"
+msgid "%1% inherited from %2%"
+msgstr "%1% heredado de %2%"
 
 #: ../../src/translator_cs.h:1851
 msgctxt "doxy-text|"
@@ -419,8 +419,8 @@ msgstr ""
 #: ../../src/translator_cs.h:603 ../../src/translator_cs.h:1740
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Union Reference"
-msgstr "%1 Unión de Referencia"
+msgid "%1% Union Reference"
+msgstr "%1% Unión de Referencia"
 
 #: ../../src/translator_cs.h:1464
 msgctxt "doxy-text|"
@@ -485,8 +485,8 @@ msgstr ""
 #: ../../src/translator_cs.h:1730
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Type Template Reference"
-msgstr "%1 Referencia Plantilla Tipo"
+msgid "%1% Type Template Reference"
+msgstr "%1% Referencia Plantilla Tipo"
 
 #: ../../src/translator_cs.h:1629
 msgctxt "doxy-text|"
@@ -501,8 +501,8 @@ msgstr "valor inicial:"
 #: ../../src/translator_cs.h:499
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Inheritance diagram for %1:"
-msgstr "Diagrama de herencias de %1:"
+msgid "Inheritance diagram for %1%:"
+msgstr "Diagrama de herencias de %1%:"
 
 #: ../../src/translator_cs.h:721
 msgctxt "doxy-text|"
@@ -534,8 +534,8 @@ msgstr ""
 #: ../../src/translator_cs.h:921
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Collaboration diagram for %1:"
-msgstr "Diagrama de colaboración para %1:"
+msgid "Collaboration diagram for %1%:"
+msgstr "Diagrama de colaboración para %1%:"
 
 #: ../../src/translator_cs.h:246
 msgctxt "doxy-text|"
@@ -686,8 +686,8 @@ msgstr "Documentación Directorio"
 #: ../../src/translator_cs.h:601 ../../src/translator_cs.h:1738
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Union Template Reference"
-msgstr "%1 Referencia Plantilla Unión"
+msgid "%1% Union Template Reference"
+msgstr "%1% Referencia Plantilla Unión"
 
 #: ../../src/translator_cs.h:1684
 msgctxt "doxy-text|"
@@ -707,8 +707,8 @@ msgstr "Jerarquía de la clase"
 #: ../../src/translator_cs.h:493
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Generated on %1 for %2 &nbsp; by"
-msgstr "Generado en %1 para %2 &nbsp; por"
+msgid "Generated on %1% for %2% &nbsp; by"
+msgstr "Generado en %1% para %2% &nbsp; por"
 
 #: ../../src/translator_cs.h:1869
 msgctxt "doxy-text|"
@@ -844,14 +844,14 @@ msgstr "Módulo de Documentación"
 #: ../../src/translator_cs.h:585
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Class Template Reference"
-msgstr "%1 Referencia Plantilla Clase"
+msgid "%1% Class Template Reference"
+msgstr "%1% Referencia Plantilla Clase"
 
 #: ../../src/translator_cs.h:609 ../../src/translator_cs.h:1746
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Interface Template Reference"
-msgstr "%1 Interface plantilla de referencia"
+msgid "%1% Interface Template Reference"
+msgstr "%1% Interface plantilla de referencia"
 
 #: ../../src/translator_cs.h:2047
 msgctxt "doxy-text|"
@@ -863,8 +863,8 @@ msgstr ""
 #: ../../src/translator_cs.h:633 ../../src/translator_cs.h:1770
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Exception Template Reference"
-msgstr "%1 Excepción Plantilla de Referencia"
+msgid "%1% Exception Template Reference"
+msgstr "%1% Excepción Plantilla de Referencia"
 
 #: ../../src/translator_cs.h:436
 msgctxt "doxy-text|"
@@ -884,8 +884,8 @@ msgstr "Buscar"
 #: ../../src/translator_cs.h:1722
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Module Template Reference"
-msgstr "%1 Módulo Plantilla de Referencia"
+msgid "%1% Module Template Reference"
+msgstr "%1% Módulo Plantilla de Referencia"
 
 #: ../../src/translator_cs.h:120
 msgctxt "doxy-text|"
@@ -895,8 +895,8 @@ msgstr "Generado automáticamente por DoxyPress partir del código fuente."
 #: ../../src/translator_cs.h:733
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Inherits %1."
-msgstr "Hereda %1."
+msgid "Inherits %1%."
+msgstr "Hereda %1%."
 
 #: ../../src/translator_cs.h:1186
 msgctxt "doxy-text|"
@@ -915,8 +915,8 @@ msgstr ""
 #: ../../src/translator_cs.h:617 ../../src/translator_cs.h:1754
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Protocol Template Reference"
-msgstr "%1 Referencia del Protocolo de Plantilla"
+msgid "%1% Protocol Template Reference"
+msgstr "%1% Referencia del Protocolo de Plantilla"
 
 #: ../../src/translator_cs.h:1857
 msgctxt "doxy-text|"
@@ -951,8 +951,8 @@ msgstr ""
 #: ../../src/translator_cs.h:2026
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Directory dependency graph for %1:"
-msgstr "Grafo de dependencias Directorio para %1:"
+msgid "Directory dependency graph for %1%:"
+msgstr "Grafo de dependencias Directorio para %1%:"
 
 #: ../../src/translator_cs.h:330
 msgctxt "doxy-text|"
@@ -1005,8 +1005,8 @@ msgstr "global"
 #: ../../src/translator_cs.h:587
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Class Reference"
-msgstr "%1 Referencia Clase"
+msgid "%1% Class Reference"
+msgstr "%1% Referencia Clase"
 
 #: ../../src/translator_cs.h:844
 msgctxt "doxy-text|"
@@ -1058,8 +1058,8 @@ msgstr "Servicios Incluidos"
 #: ../../src/translator_cs.h:2003
 #, qt-format
 msgctxt "doxy-text|"
-msgid "File in %1"
-msgstr "Archivo en %1"
+msgid "File in %1%"
+msgstr "Archivo en %1%"
 
 #: ../../src/translator_cs.h:180
 msgctxt "doxy-text|"
@@ -1099,8 +1099,8 @@ msgstr "Atributos Públicas"
 #: ../../src/translator_cs.h:635 ../../src/translator_cs.h:1772
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Exception Reference"
-msgstr "%1 Referencia Excepción"
+msgid "%1% Exception Reference"
+msgstr "%1% Referencia Excepción"
 
 #: ../../src/translator_cs.h:2021
 msgctxt "doxy-text|"
@@ -1110,8 +1110,8 @@ msgstr "Derechos de autor"
 #: ../../src/translator_cs.h:2041
 #, qt-format
 msgctxt "doxy-text|"
-msgid "and %1 more..."
-msgstr "y %1 más ..."
+msgid "and %1% more..."
+msgstr "y %1% más ..."
 
 #: ../../src/translator_cs.h:1170
 msgctxt "doxy-text|"
@@ -1203,8 +1203,8 @@ msgstr "Devoluciones"
 #: ../../src/translator_cs.h:1724 ../../src/translator_cs.h:1789
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Module Reference"
-msgstr "%1 Referencia Módulo"
+msgid "%1% Module Reference"
+msgstr "%1% Referencia Módulo"
 
 #: ../../src/translator_cs.h:2031
 msgctxt "doxy-text|"
@@ -1278,8 +1278,8 @@ msgstr "Señales Privadas"
 #: ../../src/translator_cs.h:754
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Reimplemented in %1."
-msgstr "Reimplementado en %1."
+msgid "Reimplemented in %1%."
+msgstr "Reimplementado en %1%."
 
 #: ../../src/translator_cs.h:394
 msgctxt "doxy-text|"
@@ -1301,8 +1301,8 @@ msgstr "Métodos de instancia"
 #: ../../src/translator_cs.h:2057
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Enum Reference"
-msgstr "%1 Enum Referencia"
+msgid "%1% Enum Reference"
+msgstr "%1% Enum Referencia"
 
 #: ../../src/translator_cs.h:1911
 msgctxt "doxy-text|"
@@ -1357,14 +1357,14 @@ msgstr ""
 #: ../../src/translator_cs.h:625 ../../src/translator_cs.h:1762
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Category Template Reference"
-msgstr "%1 Categoría Plantilla de Referencia"
+msgid "%1% Category Template Reference"
+msgstr "%1% Categoría Plantilla de Referencia"
 
 #: ../../src/translator_cs.h:740
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Inherited by %1."
-msgstr "Heredado por %1."
+msgid "Inherited by %1%."
+msgstr "Heredado por %1%."
 
 #: ../../src/translator_cs.h:239
 msgctxt "doxy-text|"
@@ -1400,8 +1400,8 @@ msgstr "clases"
 #: ../../src/translator_cs.h:1550
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Source File"
-msgstr "%1 Fuente Archivo"
+msgid "%1% Source File"
+msgstr "%1% Fuente Archivo"
 
 #: ../../src/translator_cs.h:1498
 msgctxt "doxy-text|"
@@ -1421,8 +1421,8 @@ msgstr "Lista de Prueba"
 #: ../../src/translator_cs.h:747
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Reimplemented from %1."
-msgstr "Reimplementado de %1."
+msgid "Reimplemented from %1%."
+msgstr "Reimplementado de %1%."
 
 #: ../../src/translator_cs.h:1634
 msgctxt "doxy-text|"
@@ -1432,8 +1432,8 @@ msgstr "Función Miembro / Documentación Subrutina"
 #: ../../src/translator_cs.h:117
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Generated automatically by DoxyPress for %1 from the source code."
-msgstr "Generado automáticamente por DoxyPress para %1 desde el código fuente."
+msgid "Generated automatically by DoxyPress for %1% from the source code."
+msgstr "Generado automáticamente por DoxyPress para %1% desde el código fuente."
 
 #: ../../src/translator_cs.h:1622
 msgctxt "doxy-text|"
@@ -1476,8 +1476,8 @@ msgstr "Cargando..."
 #: ../../src/translator_cs.h:611 ../../src/translator_cs.h:1748
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Interface Reference"
-msgstr "%1 Referencia de la interfaz"
+msgid "%1% Interface Reference"
+msgstr "%1% Referencia de la interfaz"
 
 #: ../../src/translator_cs.h:1033
 msgctxt "doxy-text|"
@@ -1499,8 +1499,8 @@ msgstr ""
 #: ../../src/translator_cs.h:926
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Include dependency graph for %1:"
-msgstr "Incluya la dependencia gráfico para %1:"
+msgid "Include dependency graph for %1%:"
+msgstr "Incluya la dependencia gráfico para %1%:"
 
 #: ../../src/translator_cs.h:2078
 msgctxt "doxy-text|"
@@ -1510,8 +1510,8 @@ msgstr "haga clic para activar la sincronización del panel"
 #: ../../src/translator_cs.h:2011
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Includes file in %1"
-msgstr "Incluye archivo en %1"
+msgid "Includes file in %1%"
+msgstr "Incluye archivo en %1%"
 
 #: ../../src/translator_cs.h:529
 msgctxt "doxy-text|"
@@ -1521,8 +1521,8 @@ msgstr "ver también"
 #: ../../src/translator_cs.h:593
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Struct Template Reference"
-msgstr "%1 Struct Plantilla de Referencia"
+msgid "%1% Struct Template Reference"
+msgstr "%1% Struct Plantilla de Referencia"
 
 #: ../../src/translator_cs.h:1990
 msgctxt "doxy-text|"
@@ -1565,8 +1565,8 @@ msgstr "nombre de la enumeración"
 #: ../../src/translator_cs.h:1975
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Relation"
-msgstr "%1 Relación"
+msgid "%1% Relation"
+msgstr "%1% Relación"
 
 #: ../../src/translator_cs.h:99
 msgctxt "doxy-text|"
@@ -1586,8 +1586,8 @@ msgstr "Lista completa de los miembros de "
 #: ../../src/translator_cs.h:491
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Generated on %1 &nbsp; by"
-msgstr "Generado en %1 &nbsp; por"
+msgid "Generated on %1% &nbsp; by"
+msgstr "Generado en %1% &nbsp; por"
 
 #: ../../src/translator_cs.h:544
 msgctxt "doxy-text|"
@@ -1608,8 +1608,8 @@ msgstr "Excepciones"
 #: ../../src/translator_cs.h:1732
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Type Reference"
-msgstr "%1 Tipo de Referencia"
+msgid "%1% Type Reference"
+msgstr "%1% Tipo de Referencia"
 
 #: ../../src/translator_cs.h:955
 msgctxt "doxy-text|"
@@ -1634,8 +1634,8 @@ msgstr "Los espacios de nombres"
 #: ../../src/translator_cs.h:653
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 File Reference"
-msgstr "%1 Referencia Archivo"
+msgid "%1% File Reference"
+msgstr "%1% Referencia Archivo"
 
 #: ../../src/translator_cs.h:514
 msgctxt "doxy-text|"
@@ -1716,8 +1716,8 @@ msgstr "Amigos"
 #: ../../src/translator_cs.h:1437
 #, qt-format
 msgctxt "doxy-text|"
-msgid "Implemented %1."
-msgstr "Implementado %1."
+msgid "Implemented %1%."
+msgstr "Implementado %1%."
 
 #: ../../src/translator_cs.h:2080
 msgctxt "doxy-text|"
@@ -1727,8 +1727,8 @@ msgstr "haga clic para desactivar la sincronización del panel"
 #: ../../src/translator_cs.h:2154
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Singleton Reference"
-msgstr "%1 Singleton Referencia"
+msgid "%1% Singleton Reference"
+msgstr "%1% Singleton Referencia"
 
 #: ../../src/translator_cs.h:2160
 msgctxt "doxy-text|"
@@ -1781,8 +1781,8 @@ msgstr "Funciones relacionadas"
 #: ../../src/translator_cs.h:643 ../../src/translator_cs.h:1780
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Reference"
-msgstr "%1 Referencia"
+msgid "%1% Reference"
+msgstr "%1% Referencia"
 
 #: ../../src/translator_cs.h:679
 msgctxt "doxy-text|"
@@ -1844,7 +1844,7 @@ msgid ""
 "\\endcode\n"
 "This will result in the following graph:\n"
 "\n"
-"<center><img alt=\"\" src=\"graph_legend.%1\"></center>\n"
+"<center><img alt=\"\" src=\"graph_legend.%1%\"></center>\n"
 "\n"
 "The boxes in the above graph have the following meaning:\n"
 "\n"
@@ -1914,7 +1914,7 @@ msgstr ""
 "\\endcode\n"
 "Esto resultará en el siguiente gráfico:\n"
 "\n"
-"<center><img alt=\"\" src=\"graph_legend.%1\"></center>\n"
+"<center><img alt=\"\" src=\"graph_legend.%1%\"></center>\n"
 "\n"
 "Las cajas en el gráfico de arriba tienen el siguiente significado:\n"
 "\n"
@@ -1974,8 +1974,8 @@ msgstr "Extiende la clase @1"
 #: ../../src/translator_cs.h:627 ../../src/translator_cs.h:1764
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Category Reference"
-msgstr "%1 Categoría Referencia"
+msgid "%1% Category Reference"
+msgstr "%1% Categoría Referencia"
 
 #: ../../src/translator_cs.h:276
 msgctxt "doxy-text|"
@@ -2000,8 +2000,8 @@ msgstr "Documentación"
 #: ../../src/translator_cs.h:2144
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Constant Group Reference"
-msgstr "%1 Constante Grupo de Referencia"
+msgid "%1% Constant Group Reference"
+msgstr "%1% Constante Grupo de Referencia"
 
 #: ../../src/translator_cs.h:857
 msgctxt "doxy-text|"
@@ -2019,8 +2019,8 @@ msgstr "Ir al código fuente de este archivo."
 #: ../../src/translator_cs.h:595
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Struct Reference"
-msgstr "%1 Struct Referencia"
+msgid "%1% Struct Reference"
+msgstr "%1% Struct Referencia"
 
 #: ../../src/translator_cs.h:132
 msgctxt "doxy-text|"
@@ -2056,8 +2056,8 @@ msgstr "Ofrecido por categoría @1."
 #: ../../src/translator_cs.h:658
 #, qt-format
 msgctxt "doxy-text|"
-msgid "%1 Namespace Reference"
-msgstr "%1 Referencia Espacio de nombres"
+msgid "%1% Namespace Reference"
+msgstr "%1% Referencia Espacio de nombres"
 
 #: ../../src/translator_cs.h:1800
 msgctxt "doxy-text|"
